--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "better-scroll": "^2.0.4",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "swiper": "^6.1.2",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-kinesis": "^1.1.5",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -17,6 +25,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-component": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
