--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "better-scroll": "^2.0.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
